@@ -3,7 +3,8 @@ Overview of changes in Gnome2::Rsvg 0.03
 
 * Bind and test rsvg_handle_get_title, rsvg_handle_get_desc,
   rsvg_set_default_dpi_x_y, and rsvg_handle_set_dpi_x_y.
-* Make using gzip'ed images work by not using strlen() in Gnome2::Rsvg::write.
+* Make using gzip'ed images work by not using strlen() in
+  Gnome2::Rsvg::Handle::write.
 
 Overview of changes in Gnome2::Rsvg 0.02
 ========================================
